--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ python-multipart==0.0.6
 supabase==2.3.4
 asyncpg==0.28.0
 sqlalchemy[asyncio]==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
 
 # =========================
 # 🤖 AI / ML Integrations
@@ -40,6 +42,7 @@ redis==5.0.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dateutil==2.8.2
+pytz==2024.1
 
 # =========================
 # 🧪 Testing & Development
