Adding reminder features

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,6 +45,11 @@ python-dateutil==2.8.2
 pytz==2024.1
 
 # =========================
+# ⏰ Time Parsing
+# =========================
+dateparser==1.2.0
+
+# =========================
 # 🧪 Testing & Development
 # =========================
 pytest==7.4.3
