--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -63,3 +63,8 @@ mypy==1.7.0
 # 🪵 Logging
 # =========================
 python-json-logger==2.0.7
+
+# =========================
+# 🔔 Notifications
+# =========================
+plyer==2.1.0
